// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slider-basic-component applies variant class to moving track and thumb container: variant-danger 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-labelledby="slider_p0914zsy9-label" aria-readonly="true" class="slider-value-left" role="textbox">
            20
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="danger slider-moving-track" style="width: 20%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="danger slider-thumb-container" role="slider" tabindex="0" style="left: 20%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="danger slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_p0914zsy9-label" aria-readonly="true" class="slider-value-right" role="textbox">
            20
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component disabled: slider is not focusable and sets aria-disabled: disabled 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-labelledby="slider_97f01jb3i-label" aria-readonly="true" class="slider-value-left" role="textbox">
            5
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 5%;"></div>
            <div aria-disabled="true" aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="5" aria-valuetext="5" class="slider-thumb-container slider-thumb-container-disabled" role="slider" tabindex="-1" style="left: 5%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_97f01jb3i-label" aria-readonly="true" class="slider-value-right" role="textbox">
            5
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component drag changes value (no snap), and snapToTicks snaps to nearest: drag-with-snap 1`] = `
<slider-basic-component snap-to-ticks="" tick-values="[0,25,50,75,100]">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-labelledby="slider_jhoxcyaw6-label" aria-readonly="true" class="slider-value-left" role="textbox">
            50
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 50%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-valuetext="50" class="slider-thumb-container" role="slider" tabindex="0" style="left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_jhoxcyaw6-label" aria-readonly="true" class="slider-value-right" role="textbox">
            50
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component hideTextBoxes hides both; individual flags hide respective side: hidden-both 1`] = `
<slider-basic-component hide-text-boxes="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 33%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="33" aria-valuetext="33" class="slider-thumb-container" role="slider" tabindex="0" style="left: 33%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component hideTextBoxes hides both; individual flags hide respective side: hidden-left 1`] = `
<slider-basic-component hide-left-text-box="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 33%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="33" aria-valuetext="33" class="slider-thumb-container" role="slider" tabindex="0" style="left: 33%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_uehchcz5c-label" aria-readonly="true" class="slider-value-right" role="textbox">
            33
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component hideTextBoxes hides both; individual flags hide respective side: hidden-right 1`] = `
<slider-basic-component hide-right-text-box="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-labelledby="slider_hlrqodmaj-label" aria-readonly="true" class="slider-value-left" role="textbox">
            33
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 33%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="33" aria-valuetext="33" class="slider-thumb-container" role="slider" tabindex="0" style="left: 33%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component keyboard ArrowRight/ArrowLeft without snapToTicks increments by 1 step: keyboard-no-snap 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-labelledby="slider_soas6o3w5-label" aria-readonly="true" class="slider-value-left" role="textbox">
            5
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 50%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="10" aria-valuemin="0" aria-valuenow="5" aria-valuetext="5" class="slider-thumb-container slider-thumb-container-active" role="slider" tabindex="0" style="left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            10
          </div>
          <div aria-labelledby="slider_soas6o3w5-label" aria-readonly="true" class="slider-value-right" role="textbox">
            5
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component keyboard snapping to tickValues goes to next/prev tick: keyboard-with-snap 1`] = `
<slider-basic-component snap-to-ticks="" tick-values="[0,20,40,60]">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-labelledby="slider_olfgu6svx-label" aria-readonly="true" class="slider-value-left" role="textbox">
            20
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 33%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="60" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="slider-thumb-container slider-thumb-container-active" role="slider" tabindex="0" style="left: 33%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            60
          </div>
          <div aria-labelledby="slider_olfgu6svx-label" aria-readonly="true" class="slider-value-right" role="textbox">
            20
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component parses tickValues from JSON attribute and shows tick labels: ticks-with-labels 1`] = `
<slider-basic-component tick-labels="" tick-values="[0,25,50,75,100]">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-labelledby="slider_oequa7ga1-label" aria-readonly="true" class="slider-value-left" role="textbox">
            50%
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0%
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 50%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-valuetext="50%" class="slider-thumb-container" role="slider" tabindex="0" style="left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-hidden="true" class="slider-ticks">
              <div>
                <div class="slider-tick" style="left: 0%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 0%; transform: translateX(-50%);">
                  0%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 25%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 25%; transform: translateX(-50%);">
                  25%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 50%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 50%; transform: translateX(-50%);">
                  50%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 75%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 75%; transform: translateX(-50%);">
                  75%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 100%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 100%; transform: translateX(-50%);">
                  100%
                </div>
              </div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100%
          </div>
          <div aria-labelledby="slider_oequa7ga1-label" aria-readonly="true" class="slider-value-right" role="textbox">
            50%
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component renders label and sliderThumbLabel modes (label id changed): label-no-thumb 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <label class="form-control-label" id="slider_24qg0ejbv-label">
          Volume
          <span id="slider_24qg0ejbv-value">
            7%
          </span>
        </label>
        <div class="slider-container">
          <div aria-labelledby="slider_24qg0ejbv-label" aria-readonly="true" class="slider-value-left" role="textbox">
            7%
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0%
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 7%;"></div>
            <div aria-labelledby="slider_24qg0ejbv-label" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="7" aria-valuetext="7%" class="slider-thumb-container" role="slider" tabindex="0" style="left: 7%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100%
          </div>
          <div aria-labelledby="slider_24qg0ejbv-label" aria-readonly="true" class="slider-value-right" role="textbox">
            7%
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component renders label and sliderThumbLabel modes (label id changed): thumb-label 1`] = `
<slider-basic-component slider-thumb-label="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-labelledby="slider_6crrybfgf-label" aria-readonly="true" class="slider-value-left" role="textbox">
            7%
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0%
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 7%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="7" aria-valuetext="7%" class="slider-thumb-container" role="slider" tabindex="0" style="left: 7%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
              <div aria-hidden="true" class="slider-thumb-label" style="position: absolute; left: 7%; transform: translateX(-50%) translateY(30%) translateY(-100%) rotate(45deg);">
                <div>
                  <span>
                    7%
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100%
          </div>
          <div aria-labelledby="slider_6crrybfgf-label" aria-readonly="true" class="slider-value-right" role="textbox">
            7%
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component renders with defaults (snapshot) + a11y slider element: default-render 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider" dir="ltr" role="presentation">
        <div class="slider-container">
          <div aria-labelledby="slider_lv0tolsah-label" aria-readonly="true" class="slider-value-left" role="textbox">
            0
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls" role="presentation">
            <div aria-hidden="true" class="slider-background-track" style="width: 100%;"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 0%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0" class="slider-thumb-container" role="slider" tabindex="0" style="left: 0%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_lv0tolsah-label" aria-readonly="true" class="slider-value-right" role="textbox">
            0
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;
